--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     </div>
 </header>
     <div class="container">
-        <div id="question-container" class="hide">
-            <div id="question">
+        <div id="initial-info">
             <h1 class="row w-100 p-3 d-flex justify-content-center text-center">Coding Quiz Challenge</h1>
             <p class="row w-100 p-3 d-flex justify-content-center text-center">Answer the following code-related questions in the quickest time possible! Incorrect answers will result in a score/time penalty of ten points/seconds!</p>
-            </div>
+        </div>
+        <div id="question-container" class="hide">
+            <div id="question"><h2>Question</h2></div>
             <div id="answer-buttons" class="btn-grid text-center">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
@@ -35,8 +36,8 @@
                 <button class="btn">Answer 4</button>
             </div>
         </div>
-        <div class="start justify-content-center text-center">
-            <button button id="start-btn" class="start-btn btn">Start Quiz</button>
+        <div class="justify-content-center text-center">
+            <button id="start-btn" class="start-btn btn">Start Quiz</button>
         </div>
     </div>
 </body>
